# sqlite-es

./: .gitignore  Cargo.toml  README.md
db/: 001_init.sql
src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  sql_query.rs  testing.rs  types.rs  view_repository.rs
tests/: lib.rs
