[package]
name = "sqlite-es"
version = "0.4.3"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A SQLite implementation of an event repository for cqrs-es."
repository = "https://github.com/jonaslimads/sqlite-es"
# documentation = "https://docs.rs/sqlite-es"
readme = "README.md"

[dependencies]
cqrs-es = {path = "../cqrs"}

async-trait = "0.1.53"
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.5.13", features = [ "sqlite" , "runtime-tokio-native-tls", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"]}

